--- a/app/src/main/res/layout/activity_detail_pesanan.xml
+++ b/app/src/main/res/layout/activity_detail_pesanan.xml
@@ -17,26 +17,27 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:paddingVertical="16dp"
-            android:paddingHorizontal="16dp">
+            android:paddingVertical="16sp"
+            android:paddingHorizontal="16sp">
 
             <ImageView
                 android:id="@+id/imageView"
-                android:layout_width="35dp"
-                android:layout_height="35dp"
+                android:layout_width="35sp"
+                android:layout_height="35sp"
                 android:src="@drawable/baseline_arrow_back_24"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 android:onClick="onBackButtonClicked"/>
 
             <TextView
+                android:layout_marginEnd="35sp"
                 android:id="@+id/txt_dtl_pesanan"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/manropebold"
                 android:text="Detail Pesanan"
                 android:textAlignment="center"
-                android:textSize="24dp"
+                android:textSize="24sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="@id/imageView"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -49,7 +50,7 @@
         android:id="@+id/cardView1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="8sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/cardView">
@@ -58,10 +59,10 @@
             android:id="@+id/detail_barang"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp"
+            android:layout_marginBottom="8sp"
             android:orientation="vertical"
-            android:paddingHorizontal="8dp"
-            android:paddingVertical="16dp">
+            android:paddingHorizontal="8sp"
+            android:paddingVertical="16sp">
 
             <LinearLayout
                 android:layout_width="wrap_content"
@@ -69,21 +70,21 @@
                 android:orientation="horizontal">
 
                 <ImageView
-                    android:layout_width="115dp"
-                    android:layout_height="115dp"
+                    android:layout_width="115sp"
+                    android:layout_height="115sp"
                     android:src="@drawable/nmax" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="8dp"
+                    android:layout_marginStart="8sp"
                     android:orientation="vertical">
 
                     <TextView
                         android:id="@+id/nama_kendaraan"
-                        android:layout_width="181dp"
+                        android:layout_width="181sp"
                         android:layout_height="wrap_content"
-                        android:layout_marginEnd="160dp"
+                        android:layout_marginEnd="160sp"
                         android:fontFamily="@font/manropebold"
                         android:text="Yamaha Nmax"
                         android:textSize="24sp" />
@@ -92,7 +93,7 @@
                         android:id="@+id/harga_kendaraan"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginBottom="24dp"
+                        android:layout_marginBottom="24sp"
                         android:fontFamily="@font/manropesemibold"
                         android:text="Rp.95.000/hari"
                         android:textSize="16sp" />
@@ -106,34 +107,34 @@
         android:id="@+id/cardView2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="8sp"
         app:layout_constraintTop_toBottomOf="@+id/cardView1">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp"
+            android:layout_marginBottom="8sp"
             android:orientation="vertical">
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="8dp"
-                android:layout_marginStart="8dp"
+                android:layout_marginBottom="8sp"
+                android:layout_marginStart="8sp"
                 android:fontFamily="@font/manropebold"
                 android:text="Deskripsi Barang"
                 android:textColor="@color/blue"
-                android:textSize="16dp" />
+                android:textSize="16sp" />
 
             <TextView
                 android:id="@+id/deskripsi_kendaraan"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:padding="8dp"
+                android:padding="8sp"
                 android:fontFamily="@font/manroperegular"
                 android:justificationMode="inter_word"
                 android:text="@string/desc_barang"
-                android:textSize="12dp" />
+                android:textSize="12sp" />
         </LinearLayout>
     </androidx.cardview.widget.CardView>
 
