--- a/app/src/main/res/layout/activity_edit_profil.xml
+++ b/app/src/main/res/layout/activity_edit_profil.xml
@@ -18,13 +18,13 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:paddingVertical="16dp"
-            android:paddingHorizontal="16dp">
+            android:paddingVertical="16sp"
+            android:paddingHorizontal="16sp">
 
             <ImageView
                 android:id="@+id/imageView"
-                android:layout_width="35dp"
-                android:layout_height="35dp"
+                android:layout_width="35sp"
+                android:layout_height="35sp"
                 android:src="@drawable/baseline_arrow_back_24"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -37,7 +37,8 @@
                 android:fontFamily="@font/manropebold"
                 android:text="Edit Profil"
                 android:textAlignment="center"
-                android:textSize="24dp"
+                android:textSize="24sp"
+                android:layout_marginEnd="35sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="@id/imageView"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -52,19 +53,19 @@
         app:layout_constraintTop_toBottomOf="@id/cardView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="8sp"
         android:orientation="vertical">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:paddingBottom="16dp">
+            android:paddingBottom="16sp">
 
             <ImageView
                 android:id="@+id/editpf"
                 android:layout_width="match_parent"
-                android:layout_height="120dp"
+                android:layout_height="120sp"
                 android:src="@drawable/editpf"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent" />
@@ -73,24 +74,24 @@
                 android:id="@+id/namapengguna"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="15dp"
-                android:layout_marginStart="16dp"
+                android:layout_marginTop="15sp"
+                android:layout_marginStart="16sp"
                 android:fontFamily="@font/manropesemibold"
                 android:text="Nama Pengguna"
-                android:textSize="12dp"
+                android:textSize="12sp"
                 app:layout_constraintTop_toBottomOf="@id/editpf"
                 app:layout_constraintStart_toStartOf="parent"/>
 
             <EditText
                 android:layout_width="match_parent"
-                android:layout_height="40dp"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="8dp"
-                android:layout_marginEnd="16dp"
+                android:layout_height="40sp"
+                android:layout_marginStart="16sp"
+                android:layout_marginTop="8sp"
+                android:layout_marginEnd="16sp"
                 android:background="@drawable/border"
                 android:fontFamily="@font/manroperegular"
                 android:hint="Nama Pengguna"
-                android:paddingLeft="5dp"
+                android:paddingLeft="5sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/namapengguna" />
@@ -99,24 +100,24 @@
                 android:id="@+id/nohp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="15dp"
-                android:layout_marginStart="16dp"
+                android:layout_marginTop="15sp"
+                android:layout_marginStart="16sp"
                 android:fontFamily="@font/manropesemibold"
-                android:text="No. Handphone"
-                android:textSize="12dp"
+                android:text="No. Hansphone"
+                android:textSize="12sp"
                 app:layout_constraintTop_toBottomOf="@id/editpf"
                 app:layout_constraintStart_toStartOf="parent"/>
 
             <EditText
                 android:layout_width="match_parent"
-                android:layout_height="40dp"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="8dp"
-                android:layout_marginEnd="16dp"
+                android:layout_height="40sp"
+                android:layout_marginStart="16sp"
+                android:layout_marginTop="8sp"
+                android:layout_marginEnd="16sp"
                 android:background="@drawable/border"
                 android:fontFamily="@font/manroperegular"
-                android:hint="No. Handphone"
-                android:paddingLeft="5dp"
+                android:hint="No. Hansphone"
+                android:paddingLeft="5sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/namapengguna" />
@@ -127,17 +128,17 @@
 
     <Button
         android:id="@+id/btn_save_edit_profil"
-        android:layout_width="139dp"
-        android:layout_height="30dp"
+        android:layout_width="139sp"
+        android:layout_height="30sp"
         android:layout_gravity="center"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="8sp"
         android:background="@drawable/border"
         android:fontFamily="@font/manropebold"
-        android:paddingVertical="0dp"
+        android:paddingVertical="0sp"
         android:text="Simpan"
         android:textAlignment="center"
         android:textColor="@color/white"
-        android:textSize="14dp"
+        android:textSize="14sp"
         app:layout_constraintTop_toBottomOf="@id/cardView1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
