--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -10,9 +10,10 @@
 
     <ImageView
         android:id="@+id/title"
-        android:layout_width="293dp"
-        android:layout_height="150dp"
-        android:layout_marginTop="96dp"
+        android:layout_width="293sp"
+        android:layout_height="150sp"
+        android:layout_marginTop="96sp"
+        android:contentDescription="@string/title"
         android:src="@drawable/lgsewain_day"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
@@ -21,8 +22,8 @@
 
     <androidx.cardview.widget.CardView
         app:layout_constraintTop_toBottomOf="@+id/title"
-        android:layout_margin="16dp"
-        app:cardCornerRadius="10dp"
+        android:layout_margin="16sp"
+        app:cardCornerRadius="10sp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
@@ -31,7 +32,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:padding="20dp"
+            android:padding="20sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/title">
@@ -43,9 +44,9 @@
                 android:layout_gravity="center"
                 android:fontFamily="@font/manropeextrabold"
                 android:text="@string/welcome"
-                android:layout_marginBottom="10dp"
+                android:layout_marginBottom="10sp"
                 android:textColor="@color/black"
-                android:textSize="24dp"
+                android:textSize="24sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/title" />
@@ -53,7 +54,7 @@
             <TextView
                 android:fontFamily="@font/manropesemibold"
                 android:text="Email Address"
-                android:layout_marginStart="7dp"
+                android:layout_marginStart="7sp"
                 android:textColor="@color/black"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"/>
@@ -61,17 +62,18 @@
             <EditText
                 android:id="@+id/email"
                 android:layout_width="match_parent"
-                android:layout_height="45dp"
+                android:layout_height="45sp"
                 android:background="@drawable/border"
                 android:fontFamily="@font/manroperegular"
                 android:hint="Enter Your Email"
-                android:textSize="12dp"
-                android:layout_marginBottom="10dp"
-                android:paddingLeft="10dp" />
+                android:textSize="12sp"
+                android:layout_marginBottom="10sp"
+                android:paddingStart="10sp"
+                tools:ignore="RtlSymmetry" />
             <TextView
                 android:fontFamily="@font/manropesemibold"
                 android:text="Password"
-                android:layout_marginStart="7dp"
+                android:layout_marginStart="7sp"
                 android:textColor="@color/black"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"/>
@@ -79,39 +81,40 @@
             <EditText
                 android:id="@+id/password"
                 android:layout_width="match_parent"
-                android:layout_height="45dp"
+                android:layout_height="45sp"
                 android:background="@drawable/border"
                 android:fontFamily="@font/manroperegular"
                 android:hint="Password"
-                android:textSize="12dp"
-                android:paddingLeft="10dp"
-                android:inputType="textPassword" />
+                android:textSize="12sp"
+                android:paddingStart="10sp"
+                android:inputType="textPassword"
+                tools:ignore="RtlSymmetry" />
 
             <TextView
                 android:layout_gravity="end"
-                android:layout_marginTop="10dp"
+                android:layout_marginTop="10sp"
                 android:id="@+id/forgetpassword"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textColor="@color/blue"
-                android:layout_marginBottom="10dp"
-                android:fontFamily="@font/manropesemibold"
+                android:textColor="@color/black"
+                android:layout_marginBottom="10sp"
+                android:fontFamily="@font/manroperegular"
                 android:text="@string/forger_password"
-                android:textSize="14dp" />
+                android:textSize="14sp" />
 
             <Button
                 android:id="@+id/btn_L"
-                android:layout_width="269dp"
-                android:layout_height="42dp"
+                android:layout_width="270sp"
+                android:layout_height="42sp"
                 android:background="@drawable/border"
                 android:fontFamily="@font/manropebold"
-                android:paddingVertical="0dp"
+                android:paddingVertical="0sp"
                 android:text="Login"
-                android:layout_marginBottom="25dp"
+                android:layout_marginBottom="25sp"
                 android:layout_gravity="center"
                 android:textAlignment="center"
                 android:textColor="@color/white"
-                android:textSize="20dp"
+                android:textSize="20sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/ly1" />
@@ -121,23 +124,23 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center"
-                android:layout_marginBottom="10dp"
+                android:layout_marginBottom="10sp"
                 android:orientation="horizontal"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/btn_L">
 
                 <ImageView
-                    android:layout_marginEnd="10dp"
+                    android:layout_marginEnd="10sp"
                     android:src="@drawable/search"
-                    android:layout_width="30dp"
-                    android:layout_height="30dp"/>
+                    android:layout_width="30sp"
+                    android:layout_height="30sp"/>
 
                 <ImageView
-                    android:layout_marginStart="10dp"
+                    android:layout_marginStart="10sp"
                     android:src="@drawable/facebook"
-                    android:layout_width="30dp"
-                    android:layout_height="30dp"/>
+                    android:layout_width="30sp"
+                    android:layout_height="30sp"/>
             </LinearLayout>
 
             <LinearLayout
@@ -154,17 +157,17 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/manroperegular"
-                    android:paddingBottom="5dp"
+                    android:paddingBottom="5sp"
                     android:text="Not have an account?"
-                    android:textSize="12dp" />
+                    android:textSize="12sp" />
 
                 <TextView
                     android:id="@+id/txt_signup"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="5dp"
+                    android:layout_marginStart="5sp"
                     android:fontFamily="@font/manropesemibold"
-                    android:paddingBottom="5dp"
+                    android:paddingBottom="5sp"
                     android:text="Sign Up"
                     android:textColor="@color/blue" />
 
