--- a/app/src/main/res/layout/activity_profil_toko.xml
+++ b/app/src/main/res/layout/activity_profil_toko.xml
@@ -15,10 +15,10 @@
         android:orientation="horizontal">
 
         <ImageView
-            android:layout_width="35dp"
-            android:layout_height="35dp"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="16dp"
+            android:layout_width="35sp"
+            android:layout_height="35sp"
+            android:layout_marginStart="16sp"
+            android:layout_marginTop="16sp"
             android:clickable="true"
             android:focusable="true"
             android:focusableInTouchMode="true"
@@ -28,20 +28,20 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="16dp"
+            android:layout_margin="16sp"
             android:text="Profil Toko Saya"
-            android:textSize="20dp"
+            android:textSize="20sp"
             android:fontFamily="@font/manropebold"
             android:textAlignment="center"
             android:layout_gravity="center"/>
 
         <ImageView
-            android:layout_width="25dp"
-            android:layout_height="30dp"
+            android:layout_width="25sp"
+            android:layout_height="30sp"
             android:src="@drawable/exit"
             android:layout_gravity="right"
-            android:layout_marginTop="16dp"
-            android:layout_marginRight="16dp"/>
+            android:layout_marginTop="16sp"
+            android:layout_marginRight="16sp"/>
 
     </androidx.cardview.widget.CardView>
 
@@ -50,7 +50,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="8sp"
         app:layout_constraintTop_toBottomOf="@id/cardView">
 
         <LinearLayout
@@ -59,19 +59,19 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             android:layout_width="match_parent"
-            android:paddingTop="16dp"
-            android:paddingBottom="16dp"
+            android:paddingTop="16sp"
+            android:paddingBottom="16sp"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
 
             <ImageView
-                android:layout_width="100dp"
-                android:layout_height="100dp"
+                android:layout_width="100sp"
+                android:layout_height="100sp"
                 android:src="@drawable/pf"
-                android:layout_marginLeft="16dp"
-                android:layout_marginTop="5dp"
-                tools:layout_editor_absoluteX="16dp"
-                tools:layout_editor_absoluteY="113dp"/>
+                android:layout_marginLeft="16sp"
+                android:layout_marginTop="5sp"
+                tools:layout_editor_absoluteX="16sp"
+                tools:layout_editor_absoluteY="113sp"/>
 
             <LinearLayout
                 android:layout_width="wrap_content"
@@ -84,32 +84,32 @@
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/manropesemibold"
                     android:text="Nama Pengguna"
-                    android:layout_marginTop="8dp"
-                    android:layout_marginLeft="16dp"
-                    android:textSize="20dp"/>
+                    android:layout_marginTop="8sp"
+                    android:layout_marginLeft="16sp"
+                    android:textSize="20sp"/>
 
                 <TextView
-                    android:layout_marginLeft="16dp"
-                    android:layout_marginTop="5dp"
+                    android:layout_marginLeft="16sp"
+                    android:layout_marginTop="5sp"
                     android:fontFamily="@font/manropemedium"
-                    android:textSize="14dp"
+                    android:textSize="14sp"
                     android:text="Email Pengguna"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"/>
 
                 <Button
                     android:id="@+id/btn_edit_profil"
-                    android:layout_width="139dp"
-                    android:layout_height="30dp"
+                    android:layout_width="139sp"
+                    android:layout_height="30sp"
                     android:layout_gravity="center"
-                    android:layout_marginTop="15dp"
+                    android:layout_marginTop="15sp"
                     android:background="@drawable/border"
                     android:fontFamily="@font/manropebold"
-                    android:paddingVertical="0dp"
+                    android:paddingVertical="0sp"
                     android:text="Edit Profil"
                     android:textAlignment="center"
                     android:textColor="@color/white"
-                    android:textSize="14dp" />
+                    android:textSize="14sp" />
 
             </LinearLayout>
 
@@ -122,7 +122,7 @@
 
     <androidx.cardview.widget.CardView
         app:layout_constraintTop_toBottomOf="@id/cardView2"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="8sp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
@@ -148,8 +148,8 @@
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/recycler_view"
                 android:layout_width="match_parent"
-                android:layout_height="603dp"
-                android:padding="8dp"
+                android:layout_height="603sp"
+                android:padding="8sp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
