--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -9,19 +9,19 @@
 
     <LinearLayout
         android:id="@+id/ly"
-        android:layout_width="0dp"
+        android:layout_width="0sp"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="16dp">
+        android:layout_marginTop="16sp">
 
         <ImageView
-            android:layout_width="35dp"
-            android:layout_height="35dp"
+            android:layout_width="35sp"
+            android:layout_height="35sp"
             android:layout_gravity="center"
-            android:layout_marginStart="16dp"
+            android:layout_marginStart="16sp"
             android:clickable="true"
             android:focusable="true"
             android:focusableInTouchMode="true"
@@ -33,8 +33,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_marginStart="16dp"
-            android:layout_marginEnd="16dp"
+            android:layout_marginStart="16sp"
+            android:layout_marginEnd="16sp"
             android:background="@drawable/border"
             android:queryHint="Search..."
             app:layout_constraintEnd_toEndOf="parent"
@@ -44,13 +44,13 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_view"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginTop="16dp"
+        android:layout_width="0sp"
+        android:layout_height="0sp"
+        android:layout_marginTop="16sp"
         app:layout_constraintTop_toBottomOf="@id/ly"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:padding="8dp" />
+        android:padding="8sp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
