--- a/app/src/main/res/layout/activity_tambah_produk.xml
+++ b/app/src/main/res/layout/activity_tambah_produk.xml
@@ -10,10 +10,10 @@
 
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="35dp"
-        android:layout_height="35dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="30dp"
+        android:layout_width="35sp"
+        android:layout_height="35sp"
+        android:layout_marginStart="16sp"
+        android:layout_marginTop="30sp"
         android:src="@drawable/baseline_arrow_back_24"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -23,11 +23,11 @@
         android:id="@+id/txt_tmbh_kendaraan"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="30sp"
         android:fontFamily="@font/manropebold"
         android:text="Tambah Kendaraan"
         android:textAlignment="center"
-        android:textSize="20dp"
+        android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -40,24 +40,24 @@
         android:layout_height="wrap_content"
         android:fontFamily="@font/manropesemibold"
         android:text="Nama Kendaraan"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="10sp"
         app:layout_constraintTop_toBottomOf="@id/txt_tmbh_kendaraan"
-        android:layout_marginStart="16dp"
-        android:textSize="12dp" />
+        android:layout_marginStart="16sp"
+        android:textSize="12sp" />
 
     <EditText
         android:id="@+id/nama_kendaraan"
         android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginTop="10dp"
+        android:layout_height="40sp"
+        android:layout_marginStart="16sp"
+        android:layout_marginEnd="16sp"
+        android:layout_marginTop="10sp"
         android:background="@drawable/border"
         android:backgroundTint="@color/white"
         android:fontFamily="@font/manroperegular"
         android:hint="Nama Kendaraan"
         app:layout_constraintTop_toBottomOf="@+id/nama_kendaraan_tmbh"
-        android:paddingLeft="5dp" />
+        android:paddingLeft="5sp" />
 
     <TextView
         android:id="@+id/txt_jns_kendaraan"
@@ -65,18 +65,18 @@
         android:layout_height="wrap_content"
         android:fontFamily="@font/manropesemibold"
         android:text="Jenis Kendaraan"
-        android:textSize="12dp"
-        android:layout_marginTop="10dp"
+        android:textSize="12sp"
+        android:layout_marginTop="10sp"
         app:layout_constraintTop_toBottomOf="@+id/nama_kendaraan"
-        android:layout_marginStart="16dp"
-        tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY="340dp" />
+        android:layout_marginStart="16sp"
+        tools:layout_editor_absoluteX="0sp"
+        tools:layout_editor_absoluteY="340sp" />
 
     <com.google.android.material.textfield.TextInputLayout
         style="@style/Widget.Material3.TextInputLayout.FilledBox.ExposedDropdownMenu"
         android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:layout_marginTop="10dp"
+        android:layout_height="40sp"
+        android:layout_marginTop="10sp"
         android:hint="Jenis Kendaraan"
         android:id="@+id/jenis_kendaraan"
         app:layout_constraintTop_toBottomOf="@+id/txt_jns_kendaraan">
@@ -85,8 +85,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@drawable/border"
-            android:layout_marginStart="16dp"
-            android:layout_marginEnd="16dp"
+            android:layout_marginStart="16sp"
+            android:layout_marginEnd="16sp"
             android:backgroundTint="@color/white"
             android:fontFamily="@font/manroperegular"
             android:inputType="none"/>
@@ -99,24 +99,24 @@
         android:layout_height="wrap_content"
         android:fontFamily="@font/manropesemibold"
         android:text="Harga Per Hari"
-        android:textSize="12dp"
-        android:layout_marginTop="10dp"
+        android:textSize="12sp"
+        android:layout_marginTop="10sp"
         app:layout_constraintTop_toBottomOf="@+id/jenis_kendaraan"
-        android:layout_marginStart="16dp"/>
+        android:layout_marginStart="16sp"/>
 
     <EditText
         android:id="@+id/harga_kendaraan1"
         android:layout_width="match_parent"
-        android:layout_height="40dp"
+        android:layout_height="40sp"
         android:background="@drawable/border"
         android:backgroundTint="@color/white"
         android:fontFamily="@font/manroperegular"
         android:hint="Masukkan Harga"
         app:layout_constraintTop_toBottomOf="@+id/harga_kendaraan"
-        android:layout_marginTop="10dp"
-        android:paddingLeft="5dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp" />
+        android:layout_marginTop="10sp"
+        android:paddingLeft="5sp"
+        android:layout_marginStart="16sp"
+        android:layout_marginEnd="16sp" />
 
     <TextView
         android:id="@+id/txt_tmbh_foto"
@@ -124,36 +124,36 @@
         android:layout_height="wrap_content"
         android:fontFamily="@font/manropesemibold"
         android:text="Tambahkan Foto Kendaraan"
-        android:textSize="12dp"
-        android:layout_marginTop="10dp"
+        android:textSize="12sp"
+        android:layout_marginTop="10sp"
         app:layout_constraintTop_toBottomOf="@id/deskripsi_kendaraan"
-        android:layout_marginLeft="16dp"
-        tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY="107dp" />
+        android:layout_marginLeft="16sp"
+        tools:layout_editor_absoluteX="0sp"
+        tools:layout_editor_absoluteY="107sp" />
 
     <LinearLayout
         android:id="@+id/ly1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toBottomOf="@id/txt_tmbh_foto"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginStart="16sp"
+        android:layout_marginTop="10sp"
         android:orientation="horizontal">
 
         <ImageView
-            android:layout_width="90dp"
-            android:layout_height="90dp"
+            android:layout_width="90sp"
+            android:layout_height="90sp"
             android:background="@drawable/addimage"
-            android:layout_marginRight="15dp"
+            android:layout_marginRight="15sp"
             android:backgroundTint="@color/blue" />
 
         <ImageView
-            android:layout_width="90dp"
-            android:layout_height="90dp"
+            android:layout_width="90sp"
+            android:layout_height="90sp"
             android:background="@drawable/addimage"
             android:backgroundTint="@color/blue"
-            tools:layout_editor_absoluteX="120dp"
-            tools:layout_editor_absoluteY="341dp" />
+            tools:layout_editor_absoluteX="120sp"
+            tools:layout_editor_absoluteY="341sp" />
 
     </LinearLayout>
 
@@ -161,45 +161,45 @@
         android:id="@+id/txt_desc_kendaraan"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="5dp"
+        android:layout_marginBottom="5sp"
         android:fontFamily="@font/manropesemibold"
         app:layout_constraintTop_toBottomOf="@id/harga_kendaraan1"
-        android:layout_marginStart="16dp"
+        android:layout_marginStart="16sp"
         android:text="Deskripsi Kendaraan"
-        android:textSize="12dp" />
+        android:textSize="12sp" />
 
     <EditText
         android:id="@+id/deskripsi_kendaraan"
         android:layout_width="match_parent"
-        android:layout_height="142dp"
+        android:layout_height="142sp"
         android:background="@drawable/border"
         android:backgroundTint="@color/white"
         app:layout_constraintTop_toBottomOf="@id/txt_desc_kendaraan"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginStart="16sp"
+        android:layout_marginEnd="16sp"
+        android:layout_marginTop="10sp"
         android:fontFamily="@font/manroperegular"
         android:gravity="start"
         android:hint="Deskripsi Kendaraan"
         android:importantForAutofill="no"
         android:inputType="textMultiLine"
-        android:paddingStart="5dp" />
+        android:paddingStart="5sp" />
 
     <Button
         android:id="@+id/btn_R"
-        android:layout_width="270dp"
-        android:layout_height="32dp"
+        android:layout_width="270sp"
+        android:layout_height="32sp"
         android:layout_gravity="center"
         android:background="@drawable/border"
         android:fontFamily="@font/manropebold"
-        android:paddingVertical="0dp"
+        android:paddingVertical="0sp"
         android:text="Tambahkan Produk"
         android:textAlignment="center"
         android:textColor="@color/white"
-        android:textSize="14dp"
+        android:textSize="14sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="50dp"
+        android:layout_marginTop="50sp"
         app:layout_constraintTop_toBottomOf="@id/ly1"/>
 
 
