--- a/app/src/main/res/layout/activity_user_registered_profil.xml
+++ b/app/src/main/res/layout/activity_user_registered_profil.xml
@@ -10,7 +10,7 @@
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cardView"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="8sp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
@@ -26,16 +26,16 @@
 
             <ImageView
                 android:id="@+id/btn_back"
-                android:layout_width="35dp"
-                android:layout_height="35dp"
-                android:layout_margin="16dp"
+                android:layout_width="35sp"
+                android:layout_height="35sp"
+                android:layout_margin="16sp"
                 android:src="@drawable/baseline_arrow_back_24"
                 android:onClick="onBackButtonClicked"/>
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_margin="16dp"
+                android:layout_margin="16sp"
                 android:text="Profil Saya"
                 android:textSize="20sp"
                 android:fontFamily="@font/manropebold"
@@ -44,11 +44,11 @@
 
             <ImageView
                 android:id="@+id/logout"
-                android:layout_width="25dp"
-                android:layout_height="30dp"
+                android:layout_width="25sp"
+                android:layout_height="30sp"
                 android:src="@drawable/exit"
                 android:layout_gravity="center"
-                android:layout_marginStart="160dp" />
+                android:layout_marginStart="160sp" />
 
         </LinearLayout>
 
@@ -57,7 +57,7 @@
     <androidx.cardview.widget.CardView
         android:id="@+id/cardView1"
         app:layout_constraintTop_toBottomOf="@id/cardView"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="8sp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
@@ -67,21 +67,21 @@
             app:layout_constraintTop_toBottomOf="@id/ly1"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            android:paddingTop="8dp"
-            android:paddingBottom="8dp"
+            android:paddingTop="8sp"
+            android:paddingBottom="8sp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
 
             <ImageView
                 android:id="@+id/foto_profil"
-                android:layout_width="100dp"
-                android:layout_height="100dp"
+                android:layout_width="100sp"
+                android:layout_height="100sp"
                 android:src="@drawable/pf"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="5dp"
-                tools:layout_editor_absoluteX="16dp"
-                tools:layout_editor_absoluteY="113dp" />
+                android:layout_marginStart="16sp"
+                android:layout_marginTop="5sp"
+                tools:layout_editor_absoluteX="16sp"
+                tools:layout_editor_absoluteY="113sp" />
 
             <LinearLayout
                 android:layout_width="wrap_content"
@@ -94,12 +94,12 @@
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/manropesemibold"
                     android:text="Nama Pengguna"
-                    android:layout_marginStart="16dp"
+                    android:layout_marginStart="16sp"
                     android:textSize="20sp" />
 
                 <TextView
-                    android:layout_marginStart="16dp"
-                    android:layout_marginTop="5dp"
+                    android:layout_marginStart="16sp"
+                    android:layout_marginTop="5sp"
                     android:fontFamily="@font/manropemedium"
                     android:textSize="14sp"
                     android:text="Email Pengguna"
@@ -108,13 +108,13 @@
 
                 <Button
                     android:id="@+id/btn_edit_profil"
-                    android:layout_width="139dp"
-                    android:layout_height="30dp"
+                    android:layout_width="139sp"
+                    android:layout_height="30sp"
                     android:layout_gravity="center"
-                    android:layout_marginTop="12dp"
+                    android:layout_marginTop="12sp"
                     android:background="@drawable/border"
                     android:fontFamily="@font/manropebold"
-                    android:paddingVertical="0dp"
+                    android:paddingVertical="0sp"
                     android:text="Edit Profil"
                     android:textAlignment="center"
                     android:textColor="@color/white"
@@ -128,7 +128,7 @@
 
     <androidx.cardview.widget.CardView
         android:id="@+id/card"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="8sp"
         app:layout_constraintTop_toBottomOf="@id/cardView1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
@@ -143,16 +143,16 @@
             app:layout_constraintEnd_toEndOf="parent">
 
             <ImageView
-                android:layout_width="35dp"
-                android:layout_height="35dp"
+                android:layout_width="35sp"
+                android:layout_height="35sp"
                 android:src="@drawable/store"
-                android:layout_marginTop="8dp"
-                android:layout_marginStart="16dp" />
+                android:layout_marginTop="8sp"
+                android:layout_marginStart="16sp" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_margin="16dp"
+                android:layout_margin="16sp"
                 android:fontFamily="@font/manropesemibold"
                 android:text="Lihat Toko Anda"
                 android:textColor="@color/blue" />
@@ -162,7 +162,7 @@
 
     <androidx.cardview.widget.CardView
         app:layout_constraintTop_toBottomOf="@id/card"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="8sp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
@@ -188,12 +188,12 @@
             <View
                 android:id="@+id/line1"
                 android:layout_width="match_parent"
-                android:layout_height="11dp"
+                android:layout_height="11sp"
                 android:background="@drawable/straightline"
                 app:layout_constraintTop_toBottomOf="@id/pesanan_saya"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                tools:layout_editor_absoluteX="1dp" />
+                tools:layout_editor_absoluteX="1sp" />
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/recycler_view"
@@ -203,7 +203,7 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
-                android:padding="8dp" />
+                android:padding="8sp" />
 
         </LinearLayout>
 
