--- a/app/src/main/res/layout/activity_verfiy_toko.xml
+++ b/app/src/main/res/layout/activity_verfiy_toko.xml
@@ -15,10 +15,10 @@
         android:orientation="horizontal">
 
         <ImageView
-            android:layout_width="35dp"
-            android:layout_height="35dp"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="16dp"
+            android:layout_width="35sp"
+            android:layout_height="35sp"
+            android:layout_marginStart="16sp"
+            android:layout_marginTop="16sp"
             android:clickable="true"
             android:focusable="true"
             android:focusableInTouchMode="true"
@@ -28,9 +28,9 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="16dp"
+            android:layout_margin="16sp"
             android:text="Daftar Toko"
-            android:textSize="20dp"
+            android:textSize="20sp"
             android:fontFamily="@font/manropebold"
             android:textAlignment="center"
             android:layout_gravity="center"/>
@@ -44,7 +44,7 @@
         android:layout_height="wrap_content"
         android:fontFamily="@font/manropesemibold"
         android:text="Verifikasi Toko"
-        android:textSize="20dp"
+        android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.058"
@@ -54,9 +54,9 @@
 
     <ImageView
         android:id="@+id/img_ktp"
-        android:layout_width="90dp"
-        android:layout_height="90dp"
-        android:layout_marginTop="15dp"
+        android:layout_width="90sp"
+        android:layout_height="90sp"
+        android:layout_marginTop="15sp"
         android:background="@drawable/addimage"
         android:backgroundTint="@color/blue"
         android:contentDescription="@string/gambarktp"
@@ -67,10 +67,10 @@
         app:layout_constraintTop_toBottomOf="@+id/txt_verifikasi_register_toko" />
 
     <TextView
-        android:layout_width="215dp"
-        android:layout_height="88dp"
-        android:layout_marginStart="27dp"
-        android:layout_marginEnd="64dp"
+        android:layout_width="215sp"
+        android:layout_height="88sp"
+        android:layout_marginStart="27sp"
+        android:layout_marginEnd="64sp"
         android:fontFamily="@font/manroperegular"
         android:text="Mohon mengambil foto KTP-mu. Informasi di KTP harus terlihat jelas di foto-mu. Pastikan nama dan NIK sesuai dengan yang tertera pada KTP."
         android:textSize="12sp"
@@ -85,72 +85,72 @@
         android:id="@+id/ly3"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="20sp"
         android:orientation="vertical"
         app:layout_constraintTop_toBottomOf="@id/img_ktp"
-        tools:layout_editor_absoluteX="0dp">
+        tools:layout_editor_absoluteX="0sp">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_marginBottom="5dp"
+            android:layout_marginStart="16sp"
+            android:layout_marginBottom="5sp"
             android:fontFamily="@font/manropesemibold"
             android:text="Nama Lengkap"
-            android:textSize="12dp"
-            tools:layout_editor_absoluteX="16dp"
-            tools:layout_editor_absoluteY="198dp" />
+            android:textSize="12sp"
+            tools:layout_editor_absoluteX="16sp"
+            tools:layout_editor_absoluteY="198sp" />
 
         <EditText
             android:layout_width="match_parent"
-            android:layout_height="40dp"
-            android:layout_marginStart="16dp"
-            android:layout_marginEnd="16dp"
-            android:layout_marginBottom="15dp"
+            android:layout_height="40sp"
+            android:layout_marginStart="16sp"
+            android:layout_marginEnd="16sp"
+            android:layout_marginBottom="15sp"
             android:background="@drawable/border"
             android:backgroundTint="@color/white"
             android:fontFamily="@font/manroperegular"
             android:hint="@string/reg_toko_nama_lengkap"
-            android:paddingLeft="5dp"
-            tools:layout_editor_absoluteX="0dp"
-            tools:layout_editor_absoluteY="216dp" />
+            android:paddingLeft="5sp"
+            tools:layout_editor_absoluteX="0sp"
+            tools:layout_editor_absoluteY="216sp" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_marginBottom="5dp"
+            android:layout_marginStart="16sp"
+            android:layout_marginBottom="5sp"
             android:fontFamily="@font/manropesemibold"
             android:text="Nomor Induk"
-            android:textSize="12dp"
-            tools:layout_editor_absoluteX="16dp"
-            tools:layout_editor_absoluteY="198dp" />
+            android:textSize="12sp"
+            tools:layout_editor_absoluteX="16sp"
+            tools:layout_editor_absoluteY="198sp" />
 
         <EditText
             android:layout_width="match_parent"
-            android:layout_height="40dp"
-            android:layout_marginStart="16dp"
-            android:layout_marginEnd="16dp"
-            android:layout_marginBottom="15dp"
+            android:layout_height="40sp"
+            android:layout_marginStart="16sp"
+            android:layout_marginEnd="16sp"
+            android:layout_marginBottom="15sp"
             android:background="@drawable/border"
             android:backgroundTint="@color/white"
             android:fontFamily="@font/manroperegular"
             android:hint="@string/nik"
-            android:paddingLeft="5dp"
-            tools:layout_editor_absoluteX="0dp"
-            tools:layout_editor_absoluteY="216dp" />
+            android:paddingLeft="5sp"
+            tools:layout_editor_absoluteX="0sp"
+            tools:layout_editor_absoluteY="216sp" />
     </LinearLayout>
 
     <Button
         android:id="@+id/btn_R"
-        android:layout_width="270dp"
-        android:layout_height="32dp"
+        android:layout_width="270sp"
+        android:layout_height="32sp"
         android:layout_gravity="center"
-        android:paddingVertical="0dp"
-        android:layout_marginTop="15dp"
+        android:paddingVertical="0sp"
+        android:layout_marginTop="15sp"
         android:text="Selesai"
         android:textColor="@color/white"
-        android:textSize="14dp"
+        android:textSize="14sp"
         android:fontFamily="@font/manropebold"
         android:textAlignment="center"
         android:background="@drawable/border"
